# candle-vulkan-kernels

./: Cargo.toml  README.md  build.rs
shaders/: add.comp
src/: main.rs
