[package]
name = "candle-vulkan-demo"
version = "0.1.0"
edition = "2021"
description = "Working Vulkan compute demo based on ash-comp-shader-example patterns"

[dependencies]
ash = { version = "0.38", features = ["linked"] }
ash-window = "0.13"
gpu-allocator = { version = "0.27", features = ["vulkan"] }
raw-window-handle = "0.6"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
bytemuck = { version = "1.14", features = ["derive"] }

[features]
default = []
vulkan = []

[build-dependencies]
shaderc = "0.8"
bytemuck = "1.14"
